--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,6 +5,10 @@ html {
     font-family: 'Cantarell', sans-serif;
 }
 
+figure {
+    margin-left: 5px;
+}
+
 header {
     display: flex;
     position: fixed;
@@ -19,11 +23,22 @@ header {
 
 main {
     border-radius: 60px;
-    width: 70%;
+    width: 50%;
     margin: 110px auto;
     background-color: #0b0713;
     border: 1px solid white;
     padding: 30 60px;
+}
+
+aside {
+    position: fixed;
+    z-index: 2147483645;
+    border-radius: 40px;
+    width: 160px;
+    background-color: #0b0713;
+    border: 1px solid white;
+    padding: 15 30px;
+    margin: 115px 15px;
 }
 
 logo {
@@ -32,6 +47,13 @@ logo {
     height: 50px;
     margin-top: 4px;
     padding-left: 17px;
+    color: #0091e9;
+}
+
+span {
+    color: #f2c300;
+
+    transition:  .4s;
 }
 
 nav {
@@ -49,13 +71,46 @@ a {
     transition: 0.6s;
 }
 
-a:hover {
-    color: aqua;
+#red:hover {
+    color: #df0000;
+}
+span:hover {
+    color: #df0000;
+}
+#yellow:hover {
+    color: #f2c300;
+}
+#blue:hover {
+    color: #0099f6;
+}
+#green:hover {
+    color: #00b844;
+}
+
+#content {
+    display: flex;
+}
+
+.mt-1 {
+    margin-top: 485px;
+}
+img {
+    border: 1px solid white;
+}
+.img-1 {
+    margin: 0 auto;
 }
 
 h1 {
     text-transform: uppercase;
     text-align: center;
+}
+
+.profile {
+    width: 150px;
+    height: 150px;
+    border-radius: 8px;
+
 }
 
 h2 {
