--- a/CSS/main.css
+++ b/CSS/main.css
@@ -94,8 +94,13 @@ span:hover {
 }
 
 .join {
-    background-color: turquoise;
+    background-color: yellow;
 }
+
+button:hover {
+    background-color: orange;
+}
+
 .mt-1 {
     margin-top: 410px;
     margin-left: 30px;
