--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -3,9 +3,7 @@ input, textarea {
     border-radius: 4px;
     color: white;
 }
-h2 {
-    margin-bottom: 70px;
-}
+
 form {
     margin:  0 auto;
     width: 444px;
@@ -17,13 +15,19 @@ button {
     background-color: #020613d4;
 }
 
-@media only screen and (max-width: 600px ) {
-    textarea {
-        width: 200px;
-        height: 1000px;
-    }
-    /* main {
-        width: 100%;
-    } */
+.container {
+    margin-top: 130px;
+    background-color: black;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    padding: 30px 0;
 }
+h2 { color: white;  font-size: 1.4rem; }
 
+@media only screen and (max-width: 470px ) {
+
+    h1 {
+        font-size: 1.2rem;
+    }
+
+}
